added code for obtaining the temperature for the current weather